--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <!--This is a Semantic HTML Change-->
     <footer>
       <div class="bottom">
-        <div class="center">All rights reserved &copy; Fabio Nolasco</div>
+        <div class="center">All rights reserved &copy; Akhil Madhamshetty/div>
       </div>
     </footer>
   </body>
