--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,15 @@
         datasets: [
           {
             data: [],
-            backgroundColor: ["#ffcd56", "#ff6384", "#36a2eb", "#fd6b19"],
+            backgroundColor: [
+              "#ffcd56",
+              "#ff6384",
+              "#36a2eb",
+              "#fd6b19",
+              "#AB6F62",
+              "#766D0F",
+              "#90A2F3",
+            ],
           },
         ],
         labels: [],
