Updated CORS Configuration

--- a/public/index.html
+++ b/public/index.html
@@ -166,7 +166,6 @@
       }
       #chart {
         height: 500px;
-        align: center;
       }
       svg {
         width: 100%;
@@ -211,7 +210,7 @@
         });
       }
       function getBudget() {
-        axios.get("/budget").then(function (res) {
+        axios.get("http://localhost:3000/budget").then(function (res) {
           for (var i = 0; i < res.data.myBudget.length; i++) {
             dataSource.datasets[0].data[i] = res.data.myBudget[i].budget;
             dataSource.labels[i] = res.data.myBudget[i].title;
@@ -226,7 +225,7 @@
       label1 = [];
       var color;
       function getBudget() {
-        axios.get("/budget").then(function (res) {
+        axios.get("http://localhost:3000/budget").then(function (res) {
           for (var i = 0; i < res.data.myBudget.length; i++) {
             data1.push(res.data.myBudget[i].budget);
             label1.push(res.data.myBudget[i].title);
